// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Компонент RecommendationsCardSkeleton Структура большого скелетона соответствует снепшоту 1`] = `
<div
  className="turbo-recommendations-card__skeleton"
>
  <Memo(SkeletonPresenter)
    className="turbo-recommendations-card__skeleton-margin"
    repeatCount={3}
  />
  <Memo(SkeletonPresenter)
    className="turbo-recommendations-card__skeleton-meta turbo-recommendations-card__skeleton-margin"
    width="12%"
  />
  <div
    className="turbo-recommendations-card__skeleton-margin"
  >
    <Memo(SkeletonPresenter)
      height="180px"
      width="100%"
    />
    <Memo(SkeletonPresenter)
      width="35%"
    />
  </div>
  <Memo(SkeletonPresenter)
    className="turbo-recommendations-card__skeleton-margin"
    repeatCount={20}
  />
  <Memo(SkeletonPresenter)
    height="44px"
    width="100%"
  />
</div>
`;

exports[`Компонент RecommendationsCardSkeleton Структура маленького скелетона соответствует снепшоту 1`] = `
<div
  className="turbo-recommendations-card__skeleton"
>
  <div
    className="turbo-recommendations-card__skeleton-margin"
  >
    <Memo(SkeletonPresenter)
      height="152px"
      width="100%"
    />
  </div>
  <Memo(SkeletonPresenter)
    repeatCount={3}
  />
  <div
    className="turbo-recommendations-card__skeleton-meta turbo-recommendations-card__skeleton-margin"
  >
    <Memo(SkeletonPresenter)
      width="24%"
    />
    <Memo(SkeletonPresenter)
      width="54%"
    />
  </div>
  <Memo(SkeletonPresenter)
    height="44px"
    width="100%"
  />
</div>
`;
